[package]
name = "six-eyes"
version = "0.1.0"
edition = "2024"

[dependencies]
exe = "0.5.6"
eframe = "0.27"
egui = "0.27"
egui_extras = { version = "0.27", features = ["all_loaders"] }
rfd = "0.14"
iced-x86 = { version = "1", default-features = false, features = ["std", "decoder", "intel", "instr_info"] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"